--- a/public/index.html
+++ b/public/index.html
@@ -114,6 +114,14 @@
   </fieldset>
 </div>
 
+<!-- Restaurar opciones de resolución de salida -->
+<label>Resolución de salida - Ancho (px):
+  <input type="number" id="outputWidth" value="1920" min="1" max="1920" />
+</label>
+<label>Resolución de salida - Alto (px):
+  <input type="number" id="outputHeight" value="1080" min="1" max="1920" />
+</label>
+
 <section id="mediainfo-section">
   <h4 style="color:rgb(85, 83, 78);">Valores previos de archivo(s) seleccionados(s):</h4>
   <button id="analyzeMediaInfoBtn" type="button">Ver valores previos</button>
