Update fmt.Println to print 'Goodbye World'

--- a/public/index.html
+++ b/public/index.html
@@ -108,8 +108,8 @@
   <fieldset id="rotationOptions" style="margin-top:10px; border:1px solid #ccc; padding:10px; border-radius:5px;">
     <legend>Rotar video (opcional)</legend>
     <label><input type="radio" name="rotateOption" id="rotateNone" value="none" checked /> No rotar</label>
-    <label><input type="radio" name="rotateOption" id="rotateLeft" value="left" /> Girar 90° a la izquierda</label>
-    <label><input type="radio" name="rotateOption" id="rotateRight" value="right" /> Girar 90° a la derecha</label>
+    <label><input type="radio" name="rotateOption" id="rotateLeft" value="left" /> Girar 90° a la derecha</label>
+    <label><input type="radio" name="rotateOption" id="rotateRight" value="right" /> Girar 90° a la izquierda</label>
     <label><input type="radio" name="rotateOption" id="rotate180" value="180" /> Girar 180°</label>
   </fieldset>
 </div>
@@ -809,4 +809,5 @@ vpartsInput.addEventListener('input', () => {
 
 </body>
 </html>
+
 
