--- a/public/index.html
+++ b/public/index.html
@@ -679,7 +679,7 @@ async function processFiles() {
           const outputHeight = validatedRes.height;
           
 
-          const scaleFilter = `scale=${outputWidth}:${outputHeight}:force_original_aspect_ratio=disable`;
+          const scaleFilter = `scale=${outputWidth}:${outputHeight};
           const cropFilter = `crop=${cropWidth}:${currentCropHeight}:${offsetX}:${offsetY}`;
 
           // Filtro de rotación
@@ -697,11 +697,11 @@ async function processFiles() {
           }
 
           // Construir filtro complejo: crop -> rotación (si aplica) -> scale
-          let filterComplex = cropFilter;
+          let filterComplex = scaleFilter + ',' + cropFilter;
           if (!rotateNone && rotateFilter) {
             filterComplex += ',' + rotateFilter;
           }
-          filterComplex += ',' + scaleFilter;
+          
 
           const profile = profileSelect.value;
           const level = document.getElementById('h264Level').value;
@@ -849,6 +849,7 @@ vpartsInput.addEventListener('input', () => {
 
 </body>
 </html>
+
 
 
 
